# cosmic-wpengine

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  PKGBUILD.sh  README.md  THIRD-PARTY-LICENSES.md  album_art.wgsl  bench  bench10  bench10.rs  bench11  bench11.rs  bench12  bench12.rs  bench13  bench13.rs  bench14  bench15  bench15.rs  bench16  bench16.rs  bench17  bench18  bench18.rs  bench19  bench19.rs  bench2  bench3  bench3.rs  bench4  bench4.rs  bench5  bench5.rs  bench6  bench7  bench8  bench8.rs  bench9  bench9.rs  (+31 more)
.Jules/: palette.md
.cargo/: audit.toml
.github/: FUNDING.yml
.github/workflows/: pr-build.yml  release.yml
.jules/: bolt.md  palette.md  sentinel.md
benches/: bench.rs  bench10.rs  bench11.rs  bench12.rs  bench13.rs  bench14.rs  bench15.rs  bench16.rs  bench17.rs  bench18.rs  bench19.rs  bench2.rs  bench3.rs  bench4.rs  bench5.rs  bench6.rs  bench7.rs  bench8.rs  bench9.rs  mpris_event_loop.rs
docs/: CUSTOM_SHADERS.md  PLAN-contrast-and-fonts.md  PLAN-gui-redesign.md  PLAN-live-wallpaper-features.md  PLAN-renderer-decomposition.md  PLAN-themes-release.md  PLAN-wallpaper-engine-parity.md  RELEASE_NOTES.md  ROADMAP.md  THEMES.md
docs/archive/: PLAN-gui-redesign.md  PLAN-themes-release.md
i18n/de/: io.github.kenyon_j.cosmic_wpengine.ftl
i18n/en/: io.github.kenyon_j.cosmic_wpengine.ftl
i18n/es/: io.github.kenyon_j.cosmic_wpengine.ftl
i18n/fr/: io.github.kenyon_j.cosmic_wpengine.ftl
i18n/it/: io.github.kenyon_j.cosmic_wpengine.ftl
i18n/nl/: io.github.kenyon_j.cosmic_wpengine.ftl
i18n/pt/: io.github.kenyon_j.cosmic_wpengine.ftl
src/: lib.rs  main.rs
src/modules/: album_art.wgsl  ambient.wgsl  audio.rs  colour.rs  config.rs  event.rs  gui.rs  gui.rs.orig  i18n.rs  kawase_blur.wgsl  logging.rs  lrclib.rs  mod.rs  mpris.rs  renderer.rs  state.rs  text.wgsl  tray.rs  utils.rs  video.rs  visualiser.wgsl  visualiser_pass.rs  wayland.rs  weather.rs  weather_compute.wgsl  weather_render.wgsl
src/modules/colour/: mod.rs  tests.rs
src/modules/config/: mod.rs  pack.rs  tests.rs  types.rs  types.rs.orig
src/modules/config/types/: app_config.rs  cosmic_bg.rs  mod.rs  theme_layout.rs
src/modules/config/types/default_themes/: bars.toml  monstercat.toml  symmetric.toml  waveform.toml
src/modules/event/: mod.rs  tests.rs
src/modules/gui/: bootstrap.rs  library.rs  mod.rs  mod.rs.orig  tests.rs  updater.rs  view.rs  view.rs.orig
src/modules/lrclib/: mod.rs  tests.rs
src/modules/mpris/: artwork.rs  mod.rs  mod.rs.orig  tests.rs
src/modules/renderer/: audio_analysis.rs  blur.rs  core.rs  draw.rs  frame_params.rs  harness.rs  mod.rs  pipelines.rs  text.rs  types.rs  utils.rs
src/modules/renderer/core/: art_layer.rs  background_layer.rs  events.rs  init.rs  mod.rs  text_subsystem.rs  updates.rs
src/modules/state/: mod.rs  tests.rs
src/modules/video/: mod.rs  tests.rs
src/modules/weather/: mod.rs  tests.rs
themes/: README.md  centre-stage.toml  minimal.toml
