[package]
name = "cosmic-wallpaper"
version = "0.1.3"
edition = "2021"
description = "A live wallpaper engine for the COSMIC desktop"
license = "MIT"
default-run = "cosmic-wallpaper"

[dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
smithay-client-toolkit = { version = "0.19", features = ["calloop"] }
wayland-client = "0.31"
raw-window-handle = "0.6"
wayland-backend = { version = "0.3", features = ["client_system"] }
wgpu = "0.20"
cosmic-text = "0.11.2"
mpris = "2"
pipewire = "0.9.2"
rustfft = "6"
url = "2.5.0"
image = { version = "0.24", features = ["jpeg", "png"] }
palette = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
ksni = "0.2"
cosmic = { package = "libcosmic", git = "https://github.com/pop-os/libcosmic.git" }
iced = { git = "https://github.com/pop-os/libcosmic.git", package = "iced", features = ["highlighter"] }
mimalloc = "0.1"
lru = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "cosmic-wallpaper"
path = "src/main.rs"

[[bin]]
name = "cosmic-wallpaper-gui"
path = "src/modules/gui.rs"

[dev-dependencies]
tempfile = "3.27.0"

[[bench]]
name = "bench"
path = "benches/bench.rs"

[[bench]]
name = "bench10"
path = "benches/bench10.rs"

[[bench]]
name = "bench11"
path = "benches/bench11.rs"

[[bench]]
name = "bench12"
path = "benches/bench12.rs"

[[bench]]
name = "bench13"
path = "benches/bench13.rs"

[[bench]]
name = "bench14"
path = "benches/bench14.rs"

[[bench]]
name = "bench15"
path = "benches/bench15.rs"

[[bench]]
name = "bench16"
path = "benches/bench16.rs"

[[bench]]
name = "bench17"
path = "benches/bench17.rs"

[[bench]]
name = "bench18"
path = "benches/bench18.rs"

[[bench]]
name = "bench19"
path = "benches/bench19.rs"

[[bench]]
name = "bench2"
path = "benches/bench2.rs"

[[bench]]
name = "bench3"
path = "benches/bench3.rs"

[[bench]]
name = "bench4"
path = "benches/bench4.rs"

[[bench]]
name = "bench5"
path = "benches/bench5.rs"

[[bench]]
name = "bench6"
path = "benches/bench6.rs"

[[bench]]
name = "bench7"
path = "benches/bench7.rs"

[[bench]]
name = "bench8"
path = "benches/bench8.rs"

[[bench]]
name = "bench9"
path = "benches/bench9.rs"
