[package]
name = "cosmic-wallpaper"
version = "0.1.9"
edition = "2021"
description = "A live wallpaper engine for the COSMIC desktop"
license = "MIT"
default-run = "cosmic-wallpaper"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "net"] }
smithay-client-toolkit = { version = "0.19", features = ["calloop"] }
wayland-client = "0.31"
raw-window-handle = "0.6"
wayland-backend = { version = "0.3", features = ["client_system"] }
wgpu = "30"
cosmic-text = "0.18"
mpris = "2"
pipewire = "0.10"
rustfft = "6"
url = "2.5.0"
image = { version = "0.24", features = ["jpeg", "png"] }
palette = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
notify = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
ksni = "0.2"
cosmic = { package = "libcosmic", git = "https://github.com/pop-os/libcosmic.git" }
iced = { git = "https://github.com/pop-os/libcosmic.git", package = "iced", features = ["highlighter"] }
mimalloc = "0.1"
lru = "0.12"
ffmpeg-next = "8.1.0"
rustc-hash = "2.1.2"
sha2 = "0.10"
libc = "0.2"

# Debian packaging for Pop!_OS / Ubuntu, consumed by `cargo deb`. Built in CI
# inside an Ubuntu 24.04 container so the runtime dependencies resolve against
# the Pop!_OS 24.04 library baseline.
[package.metadata.deb]
maintainer = "kenyon-j <99kenyonj@gmail.com>"
copyright = "2026 kenyon-j"
license-file = ["LICENSE", "0"]
extended-description = """\
A Wayland-native live wallpaper engine optimized for the COSMIC desktop, \
with audio visualization, video wallpapers, MPRIS album art and a GUI \
settings application."""
section = "x11"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/cosmic-wallpaper", "usr/bin/", "755"],
    ["target/release/cosmic-wallpaper-gui", "usr/bin/", "755"],
    ["io.github.kenyon_j.cosmic_wpengine.desktop", "usr/share/applications/", "644"],
    ["io.github.kenyon_j.cosmic_wpengine.autostart.desktop", "etc/xdg/autostart/io.github.kenyon_j.cosmic_wpengine.desktop", "644"],
    ["README.md", "usr/share/doc/cosmic-wallpaper/README.md", "644"],
]
conf-files = ["/etc/xdg/autostart/io.github.kenyon_j.cosmic_wpengine.desktop"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "cosmic-wallpaper"
path = "src/main.rs"

[[bin]]
name = "cosmic-wallpaper-gui"
path = "src/modules/gui/mod.rs"

[dev-dependencies]
tempfile = "3.27.0"

[lib]
path = "src/lib.rs"
