[package]
name = "cosmic-wallpaper"
version = "1.6.1"
edition = "2021"
description = "A live wallpaper engine for the COSMIC desktop"
license = "MIT"
default-run = "cosmic-wallpaper"

[features]
# Release-CI only: ffmpeg-sys-next's build script clones the matching FFmpeg
# tag and links it statically, so published binaries stop depending on the
# host distro's ffmpeg sonames (an Arch ffmpeg major bump made every
# CI-built binary die at the dynamic linker with exit 127 - see the roadmap's
# "Portable release binaries" entry). Needs git, make and nasm on the build
# host. Local/dev builds and the .deb stay dynamic against the system ffmpeg:
# faster builds, and the package manager owns the ABI there. FFmpeg is
# LGPL-2.1+; the static build keeps the default LGPL configure (no
# --enable-gpl), with the source-availability note in the README.
static-ffmpeg = ["ffmpeg-next/build"]

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "net"] }
smithay-client-toolkit = { version = "0.19", features = ["calloop"] }
wayland-client = "0.31"
raw-window-handle = "0.6"
wayland-backend = { version = "0.3", features = ["client_system"] }
wgpu = "30"
cosmic-text = "0.18"
mpris = "2"
pipewire = "0.10"
rustfft = "6"
url = "2.5.0"
image = { version = "0.25", features = ["jpeg", "png"] }
palette = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# Parses cosmic-bg's RON config entries (already in the lockfile via libcosmic)
# so colour/gradient wallpapers resolve instead of only Path(...) sources.
ron = "0.12"
toml = "0.8"
notify = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Rotating file sink for both binaries' logs (see modules::logging): the
# GUI's "Copy Diagnostics" and prefilled bug-report buttons need to read
# recent log lines regardless of launch path, and journalctl only covers
# the engine when it's running under its systemd autostart unit.
tracing-appender = "0.2"
ksni = "0.2"
# Pinned to the rev the release was built and tested against: libcosmic has
# no stable releases and tracking master breaks builds without warning (the
# COSMIC 1.3 bump removed the no-arg row()/column() helpers, for example).
# Bump deliberately, rebuild, and re-run the GUI when moving this.
cosmic = { package = "libcosmic", git = "https://github.com/pop-os/libcosmic.git", rev = "6359a9465b8fe4c3b0ada0cd2b87cddf644ca732", features = ["markdown"] }
iced = { git = "https://github.com/pop-os/libcosmic.git", package = "iced", rev = "6359a9465b8fe4c3b0ada0cd2b87cddf644ca732", features = ["highlighter"] }
mimalloc = "0.1"
lru = "0.16"
ffmpeg-next = "8.1.0"
rustc-hash = "2.1.2"
# Already in the lockfile via wgpu/softbuffer; taken as a direct dep so GPU
# uniform/vertex uploads can use checked casts instead of from_raw_parts.
bytemuck = { version = "1", features = ["derive"] }
sha2 = "0.10"
libc = "0.2"
# Verifies the minisign signature on release SHA256SUMS before the updater
# trusts any hash in it. Pure-Rust, verification-only.
minisign-verify = "0.2"
# Theme packs (.cwtheme): a plain gzipped tar, deliberately not a bespoke
# container, so a pack can be inspected with the standard `tar` CLI before
# ever being pointed at by this app. Both pure-Rust, no new toolchain need.
tar = "0.4"
flate2 = "1"
# Fluent-backed translation, matching the stack libcosmic itself uses
# internally (see its src/localize.rs) - same crates, same load_fallback_language/
# DesktopLanguageRequester pattern, just for this app's own strings.
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8"

# Upstream's native-build path unconditionally passes -march=native
# -mtune=native to FFmpeg's configure, baking in whatever SIMD extensions the
# CI runner happens to support (e.g. AVX-512) with no runtime fallback - a
# v1.3.1 release binary built this way SIGILLs on any end-user CPU without
# AVX-512. Vendored fix at vendor/ffmpeg-sys-next-8.1.0 (see its README);
# reapply on any version bump.
[patch.crates-io]
ffmpeg-sys-next = { path = "vendor/ffmpeg-sys-next-8.1.0" }

# Debian packaging for Pop!_OS / Ubuntu, consumed by `cargo deb`. Built in CI
# inside an Ubuntu 24.04 container so the runtime dependencies resolve against
# the Pop!_OS 24.04 library baseline.
[package.metadata.deb]
maintainer = "kenyon-j <99kenyonj@gmail.com>"
copyright = "2026 kenyon-j"
license-file = ["LICENSE", "0"]
extended-description = """\
A Wayland-native live wallpaper engine optimized for the COSMIC desktop, \
with audio visualization, video wallpapers, MPRIS album art and a GUI \
settings application."""
section = "x11"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/cosmic-wallpaper", "usr/bin/", "755"],
    ["target/release/cosmic-wallpaper-gui", "usr/bin/", "755"],
    ["io.github.kenyon_j.cosmic_wpengine.desktop", "usr/share/applications/", "644"],
    ["io.github.kenyon_j.cosmic_wpengine.autostart.desktop", "etc/xdg/autostart/io.github.kenyon_j.cosmic_wpengine.desktop", "644"],
    ["README.md", "usr/share/doc/cosmic-wallpaper/README.md", "644"],
    ["THIRD-PARTY-LICENSES.md", "usr/share/doc/cosmic-wallpaper/THIRD-PARTY-LICENSES.md", "644"],
]
conf-files = ["/etc/xdg/autostart/io.github.kenyon_j.cosmic_wpengine.desktop"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "cosmic-wallpaper"
path = "src/main.rs"

[[bin]]
name = "cosmic-wallpaper-gui"
path = "src/bin/cosmic-wallpaper-gui/main.rs"

[dev-dependencies]
# Parses each drafted i18n/<lang>/*.ftl catalog directly in
# modules::i18n::tests, independent of the i18n-embed pipeline, so a
# malformed community translation fails a test instead of just silently
# dropping entries (fluent_bundle logs parse errors via the `log` crate,
# which this project never bridges to `tracing`).
fluent-bundle = "0.16"
tempfile = "3.27.0"
# Signing side of the updater tests: generates a throwaway keypair and signs
# test data so minisign-verify's acceptance/rejection paths are both covered.
minisign = "0.7"

[lib]
path = "src/lib.rs"
